--- a/style.css
+++ b/style.css
@@ -75,3 +75,109 @@ footer {
     padding: 20px;
     text-align: center;
 }
+
+/* Mobile menu styles */
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 70px;
+  background-color: #333;
+  z-index: 999;
+}
+
+nav ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+nav li {
+  margin: 10px 0;
+}
+
+nav a {
+  display: block;
+  padding: 10px;
+  color: #fff;
+  font-size: 18px;
+  text-decoration: none;
+  text-align: center;
+  transition: background-color 0.3s ease;
+}
+
+nav a:hover {
+  background-color: #444;
+}
+
+/* Menu toggle styles */
+.menu-toggle {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  display: inline-block;
+  cursor: pointer;
+  z-index: 1000;
+}
+
+.menu-toggle span {
+  display: block;
+  width: 30px;
+  height: 5px;
+  margin-bottom: 5px;
+  background-color: #fff;
+  transition: transform 0.3s ease;
+}
+
+.menu-toggle span:last-child {
+  margin-bottom: 0;
+}
+
+/* Menu toggle animation */
+input[type="checkbox"] {
+  display: none;
+}
+
+input[type="checkbox"]:checked + .menu-toggle span:nth-child(1) {
+  transform: translateY(6px) rotate(45deg);
+}
+
+input[type="checkbox"]:checked + .menu-toggle span:nth-child(2) {
+  opacity: 0;
+}
+
+input[type="checkbox"]:checked + .menu-toggle span:nth-child(3) {
+  transform: translateY(-6px) rotate(-45deg);
+}
+
+/* Media queries */
+@media screen and (min-width: 768px) {
+  nav {
+    position: static;
+    height: auto;
+    background-color: transparent;
+  }
+  
+  nav ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    height: 100%;
+  }
+  
+  nav li {
+    margin: 0 10px;
+  }
+  
+  .menu-toggle {
+    display: none;
+  }
+}
+
